--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,15 @@ idna==3.4
 importlib-metadata==6.7.0
 magic-filter==1.0.11
 multidict==6.0.4
-numpy==1.21.6
-pandas==1.3.5
+numpy==1.25.2
+pandas==2.1.0
 python-dateutil==2.8.2
 python-dotenv==0.21.1
 pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
 typing_extensions==4.7.1
+tzdata==2023.3
 urllib3==2.0.4
 yarl==1.9.2
 zipp==3.15.0
