feature: add support bot

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 BOT_API_KEY="NotSoSecret"
+SUP_BOT_API_KEY="NotSoSecret"
+SUP_CHAT_ID="NotSoSecret"
 SHORT_LINK_API_TOKEN="NotSoSecret"
 SHORT_LINK_API_SITE="NotSoSecret"
 SHORT_LINK_API_DATA="NotSoSecret"
