fix: remove player buttons

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,5 @@ MAIN_URL="NotSoSecret"
 MODELS_URL="NotSoSecret"
 NO_MATERIAL_URL="NotSoSecret"
 PLAYER_REF="NotSoSecret"
+PLAYER_PARAMS="NotSoSecret"
 USER_AGENT_HEADER="NotSoSecret"
