feature: add payment

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ NO_MATERIAL_URL="NotSoSecret"
 PLAYER_REF="NotSoSecret"
 PLAYER_PARAMS="NotSoSecret"
 USER_AGENT_HEADER="NotSoSecret"
+SUBSCRIPTION_COST=500*100
+PAYMENTS_TOKEN="NotSoSecret"
+PAYMENT_IMG="NotSoSecret"
