--- a/.gitignore
+++ b/.gitignore
@@ -221,7 +221,7 @@ pip-selfcheck.json
 
 
 ### Personal Data
-.err_logs
+.err_log
 
 
 # End of https://www.toptal.com/developers/gitignore/api/python,linux,visualstudiocode,venv
