feature: add payment

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,24 @@
-BOT_API_KEY="NotSoSecret"
-SUP_BOT_API_KEY="NotSoSecret"
-SUP_CHAT_ID="NotSoSecret"
-DATABASE="NotSoSecret"
-DB_HOST="NotSoSecret"
-DB_USER="NotSoSecret"
-DB_PASSWORD="NotSoSecret"
-PAGE_URL="NotSoSecret"
-MAIN_URL="NotSoSecret"
-MODELS_URL="NotSoSecret"
-NO_MATERIAL_URL="NotSoSecret"
-PLAYER_REF="NotSoSecret"
-PLAYER_PARAMS="NotSoSecret"
-USER_AGENT_HEADER="NotSoSecret"
-SUBSCRIPTION_COST=500*100
-PAYMENTS_TOKEN="NotSoSecret"
-PAYMENT_IMG="NotSoSecret"
+BOT_API_KEY=Your_bot_key
+
+SUP_BOT_API_KEY=Your_support_bot_key
+SUP_CHAT_ID=Your_support_chad_id
+
+DATABASE=Database_name
+DB_HOST=Database_host
+DB_USER=Database_username
+DB_PASSWORD=Database_password
+
+PAGE_URL=Parsed_page_url
+MAIN_URL=Parsed_main_page_url
+MODELS_URL=Parsed_models_page_url
+USER_AGENT_HEADER=Your_headers
+NO_MATERIAL_URL=No_image_url
+
+PLAYER_REF=Player_url
+PLAYER_PARAMS=Player_params
+
+SUBSCRIPTION_COST=Your_cost
+PAYMENT_URL=Your_payment_url
+CHECK_PAYMENT_URL=Your_payment_check_url
+SHOP_ID=Your_shop_id
+SHOP_TOKEN=Your_shop_token
