--- a/requirements.txt
+++ b/requirements.txt
@@ -4,18 +4,22 @@ aiohttp==3.8.5
 aiosignal==1.3.1
 alive-progress==3.1.4
 annotated-types==0.5.0
+appdirs==1.4.4
 async-timeout==4.0.3
 asynctest==0.13.0
 attrs==23.1.0
 Babel==2.9.1
 beautifulsoup4==4.12.2
 black==23.9.0
+bs4==0.0.1
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
+cssselect==1.2.0
 exceptiongroup==1.1.3
+fake-useragent==1.2.1
 frozenlist==1.3.3
 gevent==23.9.0.post1
 grapheme==0.6.0
@@ -25,6 +29,7 @@ h11==0.14.0
 idna==3.4
 importlib-metadata==6.7.0
 isort==5.12.0
+lxml==4.9.3
 magic-filter==1.0.11
 multidict==6.0.4
 mypy-extensions==1.0.0
@@ -32,6 +37,7 @@ numpy==1.25.2
 outcome==1.2.0
 packaging==23.1
 pandas==2.1.0
+parse==1.19.1
 pathspec==0.11.2
 platformdirs==3.10.0
 postgres==4.0
@@ -42,21 +48,28 @@ pycparser==2.21
 pydantic==2.3.0
 pydantic-settings==2.0.3
 pydantic_core==2.6.3
+pyee==8.2.2
+pyppeteer==1.0.2
+pyquery==2.0.0
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==0.21.1
 pytz==2023.3.post1
 requests==2.31.0
+requests-html==0.10.0
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
 telegraph==2.2.0
+tqdm==4.66.1
 trio==0.22.2
 trio-websocket==0.10.4
 typing_extensions==4.7.1
 tzdata==2023.3
-urllib3==2.0.4
+urllib3==1.26.16
+w3lib==2.1.2
+websockets==10.4
 wsproto==1.2.0
 yarl==1.9.2
 youtube-dl==2021.12.17
